@@ -1,5 +1,6 @@
 Changes of tre-0.7 relative to tre-0.6:
   * (%NEW): Accidentally converted to (%NEW NIL) – fixed.
+  * PHP: Debugged property and associative array functions.
 
 Changes of tre-0.6 relative to tre-0.5:
   * PHP: PROPERTY-NAMES fixed for associative arrays.
